# discord_telegram_bot

./: .env.example  .gitignore  README.md  discloud.config  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: checks.yml
src/: config.py  error.py  reminders.py  telegram.py  utils.py
src/cogs/: channels.py  info.py  reminders.py  telegram.py
src/database/: __init__.py  channels.py  database.py  reminder_groups.py  reminders.py
src/services/discord/: __init__.py  bot.py  cog_loader.py
src/services/forwarder/: forwarder.py
src/services/integration/: forwarder.py
src/services/telegram/: client.py  errors.py  exceptions.py  qr.py
src/shared/: exceptions.py  permissions.py  reminders.py  services.py  utils.py
