[project]
name = "discord-telegram-bot"
version = "2.0.0"
description = "Discord bot that forwards messages from Telegram channels"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord.py",
    "telethon",
    "python-dotenv",
    "qrcode[pil]",
    "aiohttp",
    "watchfiles",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
]

[tool.ruff.lint]
select = [
    "ANN",      # Annotations (type hints)
    "PLC",      # Pylint conventions (import from typing)
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes (unused imports)
    "I",        # isort (import sorting)
    "B",        # flake8-bugbear (common bugs and design problems)
    "C4",       # flake8-comprehensions (better comprehensions)
    "UP",       # pyupgrade (modernize Python syntax)
]
ignore = [
    "E501",     # Line too long
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
